# Wisdom

./: .clang-format  .clang-format.sh  .clang-tidy  .gitignore  0001-fix-for-dx-renderpass.patch  CMakeLists.txt  CMakePresets.json  CNAME  CODE_OF_CONDUCT.md  Changelog.md  LICENSE.txt  Misc.cmake  README.md  annotated.html  annotated_dup.js  classes.html  dir_011086855f5334e6bac4ffd9a6d58d51.html  dir_011086855f5334e6bac4ffd9a6d58d51.js  dir_02716dd72a8614ee68b77ace3f5dd5ec.html  dir_02716dd72a8614ee68b77ace3f5dd5ec.js  dir_2203e0b5295cee181432252ff57a5ecf.html  dir_2203e0b5295cee181432252ff57a5ecf.js  dir_505f8fb1d94397c0e309438d9f7c9468.html  dir_505f8fb1d94397c0e309438d9f7c9468.js  dir_6135aa1ca173fa1ff9d50082fd739f32.html  dir_6135aa1ca173fa1ff9d50082fd739f32.js  dir_93d0b9e9458c6ea11f0fba22e9ea47a1.html  dir_93d0b9e9458c6ea11f0fba22e9ea47a1.js  files.html  files_dup.js  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_dup.js  functions_e.html  functions_f.html  functions_g.html  functions_h.html  functions_i.html  (+50 more)
Plugins/: CMakeLists.txt
Plugins/DX12Allocator/: CMakeLists.txt
Plugins/Wil/: CMakeLists.txt
Plugins/WinRT/: CMakeLists.txt
bindings/: CMakeLists.txt  custom.cpp  wisdom.cpp  wisdom.h  wisdom_exports.h  wisdom_ext.cpp  wisdom_ext.inl
example/: CMakeLists.txt
example/include/example/: app.h  mouse.h
example/shaders/: CMakeLists.txt
example/shaders/forward/: example.ps.hlsl  example.vs.hlsl
example/src/: app.cpp  entry_main.cpp  window.cpp
examples/: .clang-tidy  CMakeLists.txt  deps.cmake
examples/basic/: CMakeLists.txt
examples/basic/descriptor_storage/: CMakeLists.txt  entry_main.cpp
examples/basic/lut/: CMakeLists.txt  entry_main.cpp  lut_loader.h
examples/basic/modules/: CMakeLists.txt  entry_main.cpp  window.cpp  window.h  wisdom.ixx
examples/basic/multiview/: CMakeLists.txt  entry_main.cpp
examples/basic/raytracing/: CMakeLists.txt  entry_main.cpp
examples/basic/shaders/: CMakeLists.txt
examples/cmake/: deps.cmake
examples/common/: CMakeLists.txt  keyboard.cpp  keyboard.h  mouse.cpp  mouse.h  window.cpp  window.h  window_event.h  wis_helper.cpp  wis_helper.h  wis_swapchain.h
examples/custom/: CMakeLists.txt
examples/custom/bindings/: CMakeLists.txt  entry_main.c
examples/custom/cross-app/: CMakeLists.txt  entry_main.cpp
examples/custom/cross_device/: CMakeLists.txt  app.cpp  app.h  lut.cube  lut.ps.hlsl  transfer_node.cpp  transfer_node.h  window.cpp  work_node.cpp  work_node.h
examples/custom/lut/: CMakeLists.txt  app.cpp  app.h  entry_main.cpp  lut_loader.cpp  lut_loader.h
examples/custom/lut_windowed/: CMakeLists.txt  app.cpp  app.h  deps.cmake  keyboard.cpp  keyboard.h  lut.cube  lut.ps.hlsl  lut.vs.hlsl  lut_loader.cpp  lut_loader.h  menu.h  mouse.cpp  mouse.h  resource.h  util.cpp  util.h  window.cpp  window.h
examples/custom/multimon/: CMakeLists.txt  app.cpp  app.h  keyboard.cpp  lut.ps.hlsl  present.ps.hlsl  present.vs.hlsl  resource.h  transfer_node.cpp  transfer_node.h  window.cpp  window.h  work_node.cpp  work_node.h
examples/custom/multimon-single/: CMakeLists.txt  entry_main.cpp
examples/hello-triangle-kdgui/: CMakeLists.txt  app.cpp  app.h  entry_main.cpp  window.cpp  window.h
examples/hello-triangle-kdgui-t/: CMakeLists.txt  app.cpp  app.h  entry_main.cpp
examples/hello-triangle-modules/: CMakeLists.txt  app.ixx  entry_main.cpp  window.ixx
examples/hello-triangle-win32/: CMakeLists.txt
examples/hello-triangle-win32-t/: CMakeLists.txt
examples/hello-triangle-win32-t/include/: resource.h
examples/hello-triangle-win32-t/resources/: WinD3D.rc
examples/hello-triangle-win32-t/src/: app.cpp  entry_main.cpp  keyboard.cpp  mouse.cpp  util.cpp  window.cpp
examples/hello-triangle-win32/resources/: resource.h
examples/hello-triangle-win32/src/: app.cpp  entry_main.c  entry_main.cpp  keyboard.cpp  util.cpp  window.cpp
examples/hello-triangle-winrt/: CMakeLists.txt  app.cpp  app.h  entry_main.cpp  package.appxmanifest  pch.h  window.h
examples/platform/: CMakeLists.txt
examples/platform/hello-triangle-kdgui-t/: CMakeLists.txt  app.cpp  app.h  entry_main.cpp  window.cpp  window.h
examples/platform/hello-triangle-sdl/: CMakeLists.txt
examples/platform/hello-triangle-sdl2/: CMakeLists.txt  entry_main.cpp  platform.cpp  platform.h  util.h
examples/platform/hello-triangle-win32/: CMakeLists.txt
examples/platform/hello-triangle-win32-t/: CMakeLists.txt  deps.cmake
examples/platform/hello-triangle-winrt/: CMakeLists.txt  app.h  deps.cmake  entry_main.cpp  package.appxmanifest  pch.h  window.h
examples/platform/shaders/: CMakeLists.txt  example.ps.hlsl
examples/shaders/: CMakeLists.txt
examples/uniform-buffers-kdgui/: CMakeLists.txt  app.cpp  app.h  cube.h  drawable.h  entry_main.cpp  graphics.h  window.cpp  window.h
generator/: CMakeLists.txt  entry_main.cpp  enums.h  format.cmake  generator.cpp  generator.h  string_literal.h
platform/: CMakeLists.txt
platform/wayland/: CMakeLists.txt
platform/windows/: CMakeLists.txt
platform/xcb/: CMakeLists.txt
plugins/: CMakeLists.txt
plugins/DX12Agility/: CMakeLists.txt
plugins/DX12Allocator/: CMakeLists.txt
plugins/DXC/: CMakeLists.txt
plugins/VKAllocator/: CMakeLists.txt  vma.cpp
plugins/VKHpp/: CMakeLists.txt
plugins/Volk/: CMakeLists.txt
plugins/Wil/: CMakeLists.txt
plugins/WinRT/: CMakeLists.txt
tests/: CMakeLists.txt
tests/basic/: CMakeLists.txt  copy_tests.cpp  extension_tests.cpp  relaxed_destruction_order.cpp  vulkan_tests.cpp
tests/manual/: CMakeLists.txt
vv/VKAllocator/: CMakeLists.txt
wisdom/: CMakeLists.txt  dx12.cmake  platform.cmake  shared.cmake  vulkan.cmake
wisdom/bindings/: wisdom.cpp  wisdom.h
wisdom/cmake/: documentation.cmake  dx12.cmake  vulkan.cmake
wisdom/docs/: Doxyfile.in  DoxygenLayout.xml  getting_started.h  main_page.h
wisdom/extensions/: CMakeLists.txt
wisdom/generator/: CMakeLists.txt  entry_main.cpp
wisdom/modules/: api.ixx  dx12.ixx  vulkan.ixx  wisdom.ixx
wisdom/platform/: CMakeLists.txt
wisdom/src/: x.cpp
(+702 files in other folders)
